--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "type": "git",
     "url": "git+https://github.com/eneax/typescript-node-server.git"
   },
-  "keywords": ["javascript", "nodejs", "typescript"],
+  "keywords": [
+    "javascript",
+    "nodejs",
+    "typescript"
+  ],
   "author": "Enea Xharja",
   "license": "MIT",
   "bugs": {
@@ -22,5 +26,8 @@
     "@types/node": "^17.0.42",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
